more additions while working on #4

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,13 @@
+@article{pip2014microcystin,
+  title={Microcystin and algal chlorophyll in relation to nearshore nutrient concentrations in Lake Winnipeg, Canada},
+  author={Pip, Eva and Bowman, Lindsay},
+  journal={Environment and Pollution},
+  volume={3},
+  number={2},
+  pages={p36},
+  year={2014}
+}
+
 @misc{usepa2015drinking,
   title={Drinking Water Health Advisory for the Cyanobacterial Microcystin Toxins.  EPA-820R15100},
   author={USEPA},
